# dioxus-text-adventure

./: .gitignore  .rustfmt.toml  CNAME  Cargo.toml  README.md  index.html
src/: main.rs  style.css  theme.css
src/components/: mod.rs
src/components/characters/: mod.rs  style.css
src/components/inventory/: mod.rs  style.css
src/components/locations/: mod.rs  style.css
src/components/text_display/: mod.rs  style.css
src/layout/: mod.rs
src/layout/footer/: mod.rs
src/layout/header/: mod.rs
src/layout/sidebar/: mod.rs  style.css
src/modals/: mod.rs
src/modals/modal_container/: mod.rs  style.css
src/modals/select_target/: mod.rs  style.css
src/modules/: mod.rs
src/modules/action/: mod.rs
src/modules/actor/: mod.rs
src/modules/alert/: mod.rs
src/modules/game/: mod.rs
src/modules/history/: mod.rs
src/modules/item/: mod.rs
src/modules/scene/: mod.rs
src/modules/state/: mod.rs
src/modules/terminal/: mod.rs
src/modules/turn/: mod.rs
