[package]
name = "rust-dioxus-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.1"
dioxus-web = "0.3.1"
rand =  "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
derivative = "2.2.0"
